<resources>
    <string name="app_name">PAN</string>
    <string name="signup">Daftar</string>
    <string name="login">Masuk</string>
    <string name="message_welcome_page">Temukan teman virtual baru dalam bentuk hewan peliharaan yang siap mendengarkan dan berbicara dengan kamu</string>
    <string name="title_welcome_page">Selamat Datang di Pan</string>
    <string name="title_signup_page">Register ke Pan</string>
    <string name="email">Email</string>
    <string name="error_empty_field">Kolom ini harus diisi</string>

    <string name="password">Password</string>
    <string name="message_login_page">Masukkan dulu datamu ya</string>
    <string name="title_login_page">Masuk ke Pan</string>
    <string name="name">Nama</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Keluar</string>
    <string name="start">Mulai</string>
    <string name="number_phone">Nomor Telepon</string>
    <string name="dob">Tanggal Lahir</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="email_address">this@example.com</string>
    <string name="pass_hint">min 8 character</string>
    <string name="nama_hint">Your name</string>
    <string name="nomor">08......</string>
    <string name="tanggal_lahir">dd/mm/yyyy</string>
    <string name="pilih_gender">Jenis Kelamin</string>
    <string name="acc_question">Sudah punya akun?</string>
    <string name="acc_question2">Belum punya akun?</string>
    <string name="title_activity_main_pan">MainPanActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_pan_main">PanMainActivity</string>
    <string name="senang">Senang</string>
    <string name="sedih">Sedih</string>
    <string name="takut">Takut</string>
    <string name="love">Love</string>
    <string name="marah">Marah</string>
    <string name="catatan">Catatan</string>
    <string name="simpan">Simpan</string>
    <string name="bagaimana_perasaanmu">Bagaimana perasaanmu?</string>
    <string name="_24">24</string>
    <string name="_23">23</string>
    <string name="_22">22</string>
    <string name="hari_ini">Hari ini</string>
    <string name="tambahkan_ke_jurnal">Tambahkan ke Jurnal</string>
    <string name="journal">Journal</string>
    <string name="Profile">Profile</string>
    <string name="welcoming_name">Selamat Datang</string>
    <string name="name_user">Fani Ivananda!!</string>
    <string name="save_change">Simpan Perubahan</string>
    <string name="title_edit_page">Edit Profile</string>
    <string name="title_chat">PAN CHAT</string>
    <string name="error_password">Gunakan minimal 8 karakter</string>
    <string name="error_email">Gunakan format email yang tepat\n</string>
    <string name="cek_jurnalmu_disini">Cek jurnalmu disini</string>
    <string name="cek_kondisi_emosimu_ndengan_fitur_ini">Cek kondisi emosimu\ndengan fitur ini</string>
    <string name="dapatkan_rekomendasi_naktivitas_untuk_anda">Dapatkan rekomendasi\naktivitas untuk Anda</string>
    <string name="apa_yang_kamu_rasakan">Apa yang kamu rasakan?</string>
    <string name="kemarin">Kemarin</string>
    <string name="semangat_ya_aku_yakin_kamu_bisa">Semangat ya, aku yakin kamu bisa!</string>
    <string name="chat_sekarang">Chat Sekarang +</string>
    <string name="hi">Hi, </string>
    <string name="kondisi_mu_sekarangr">Kondisi mu sekarang</string>
    <string name="cinta">cinta</string>
    <string name="date">Date</string>
    <string name="emotion">Emotion</string>
    <string name="this_is_a_long_note_that_exceeds_20_characters_and_will_be_truncated_with">This is a long note that exceeds 20 characters and will be truncated with ....</string>
    <string name="note_jrnl">Aku hari ini cape banget dibully smaa temen kelas aku dan itu bikin aku sedih banget</string>
    <string name="pilih_tanggal">Pilih Tanggal</string>


</resources>