<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_journal"
        android:name="com.capstone.pan.view.journal.create.JournalFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_journal" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.capstone.pan.view.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.capstone.pan.view.profile.ProfileEditFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.capstone.pan.view.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />


</navigation>