<!-- res/layout/activity_detail_journal.xml -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:background="@drawable/textview_background"
        android:padding="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewEmotion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emotion"
        android:textSize="18sp"
        android:background="@drawable/textview_background"
        android:padding="8dp"
        android:layout_marginBottom="16dp"/>

    <TextView
        android:id="@+id/textViewNote"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/note_jrnl"
        android:textSize="18sp"
        android:background="@drawable/textview_background"
        android:padding="8dp"/>

</LinearLayout>
