<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/rv_journal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">



            <TextView
                android:id="@+id/textViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_background"

                android:text="@string/date"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textViewEmotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/emotion"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/textViewNote"
                android:background="@drawable/textview_background"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/this_is_a_long_note_that_exceeds_20_characters_and_will_be_truncated_with"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_marginTop="8dp"/>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
